fix: wrapping issues

--- a/src/templates/atsTemplate/AtsTemplate.module.css
+++ b/src/templates/atsTemplate/AtsTemplate.module.css
@@ -50,6 +50,9 @@
   font-size: 11px;
   color: #000;
   margin-top: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .uniContactItem {
